--- a/deploy/slack.mdx
+++ b/deploy/slack.mdx
@@ -145,7 +145,7 @@ Since the Chainlit app is not running, the Slack app will not be able to communi
 
 For the example, we will use this simple app:
 
-```python
+```python my_app.py
 import chainlit as cl
 
 @cl.on_message
