--- a/deploy/slack.mdx
+++ b/deploy/slack.mdx
@@ -39,7 +39,7 @@ Create a name for your bot, such as "ChainlitDemo". Select the workspace you wou
 
 ## Working Locally
 
-If you are working locally, you will have to expose your local Chainlit app to the internet. You can use [ngrok](https://ngrok.com/) for this.
+If you are working locally, you will have to expose your local Chainlit app to the internet to receive incoming messages to Slack. You can use [ngrok](https://ngrok.com/) for this.
 
 ```bash
 ngrok http 8000
