feat: adjust to first message in thread

--- a/deploy/discord.mdx
+++ b/deploy/discord.mdx
@@ -130,17 +130,20 @@ import discord
 
 @cl.on_message
 async def on_message(msg: cl.Message):
-    # The user session resets on every Discord message. Add previous chat messages manually.
+    # The user session resets on every Discord message.
+    # So we add previous chat messages manually.
     messages = cl.user_session.get("messages", [])
     channel: discord.abc.MessageableChannel = cl.user_session.get("discord_channel")
 
     if channel:
         cl.user_session.get("messages")
-        discord_messages = [message async for message in channel.history(limit=limit, oldest_first=True)]
-        for x in discord_messages[:-1]:
+        discord_messages = [message async for message in channel.history(limit=10)]
+
+        # Go through last 10 messages and remove the current message.
+        for x in discord_messages[::-1][:-1]:
             messages.append({
-                "role": "assistant" if x.author == discord_client.user else "user",
-                "content": x.content
+                "role": "assistant" if x.author.name == discord_client.user.name else "user",
+                "content": x.clean_content if x.clean_content else x.channel.name # first message is empty
             })
 
     # Your code here
