--- a/api-reference/elements/audio.mdx
+++ b/api-reference/elements/audio.mdx
@@ -29,6 +29,10 @@ You must provide either an url or a path or content bytes.
   The file content of the audio in bytes format.
 </ParamField>
 
+<ParamField path="auto_play" type="bool" optional>
+  Whether the audio should start playing automatically.
+</ParamField>
+
 ## Example
 
 ```python
