--- a/authentication/password.mdx
+++ b/authentication/password.mdx
@@ -14,8 +14,12 @@ You can verify the credentials against any service that you'd like (your own DB,
 ## Example
 
 ```python
+import os
 from typing import Optional
 import chainlit as cl
+
+# "CHAINLIT_CUSTOM_AUTH" environment variable must be set to any value
+os.environ["CHAINLIT_AUTH_SECRET"] = "my_secret"
 
 @cl.password_auth_callback
 def auth_callback(username: str, password: str):
