--- a/authentication/password.mdx
+++ b/authentication/password.mdx
@@ -18,7 +18,7 @@ import os
 from typing import Optional
 import chainlit as cl
 
-# "CHAINLIT_CUSTOM_AUTH" environment variable must be set to any value
+# "CHAINLIT_AUTH_SECRET" environment variable must be set to any value
 os.environ["CHAINLIT_AUTH_SECRET"] = "my_secret"
 
 @cl.password_auth_callback
