Apply suggestions from code review

--- a/customisation/translation.mdx
+++ b/customisation/translation.mdx
@@ -8,7 +8,7 @@ Translation files are located in the `.chainlit/translations` directory. The fil
 
 ## Customizing UI Text
 
-In addition to standard translations, you can customize the names of front-end components, molecules, and organisms used within the UI. Each UI element is associated with a unique translation key in the translation files. By modifying these keys, you can personalize or localize the UI text according to your needs.
+In addition to standard translations, you can customize the text of front-end components used within the UI. Each UI element is associated with a unique translation key in the translation files. By modifying these keys, you can personalize or localize the UI text according to your needs.
 
 For example, to change the label of a navigation tab from "Readme" to "Documentation", locate the corresponding key in your translation file (e.g., `components.organisms.header.readme`) and update the value:
 
