Customize UI text (#109)
Co-authored-by: Thibaut Patel <thibaut.patel@gmail.com>

--- a/customisation/overview.mdx
+++ b/customisation/overview.mdx
@@ -24,6 +24,14 @@ In this section we will go through the different options available.
     Learn how to provide your own CSS stylesheet.
   </Card>
   <Card
+    title="Translation Files"
+    icon="file-code"
+    color="#007bff"
+    href="/customisation/translation"
+  >
+    Learn how to navigate and modify translation files for UI text customization.
+  </Card>
+  <Card
     title="Theme"
     icon="palette"
     color="#16a34a"
