--- a/customisation/theme.mdx
+++ b/customisation/theme.mdx
@@ -15,6 +15,15 @@ Currently, you have the freedom to modify:
   time you update the theme!
 </Note>
 
+## Default Theme
+
+To set the default theme, navigate to the `[UI.theme]` section in your `config.toml` file and update the `default` value.
+
+```bash config.toml
+[UI.theme]
+    default = "dark"
+```
+
 ## Light Theme Modification
 
 To modify the light theme, find or create the `[UI.theme.light]` section and update the colors as per your preference.
