--- a/data-persistence/enterprise.mdx
+++ b/data-persistence/enterprise.mdx
@@ -31,3 +31,11 @@ LITERAL_API_URL="https://cloud.your_literal.com" chainlit run main.py
 Using your own Literal AI instance, you will still need to provide a valid API key to persist the data as described [here](/data-persistence/overview).
 
 Once activated, your chats and elements will be stored on your own server.
+
+## Debug Mode
+
+You can enable the new debug mode by adding `-d` to your `chainlit run` command. You will see a debug button below each message taking you to the trace/prompt playground.
+
+<Frame caption="Debug example">
+  <img src="/images/debug.gif" />
+</Frame>
