--- a/examples/qa.mdx
+++ b/examples/qa.mdx
@@ -123,7 +123,7 @@ async def main(message: cl.Message):
             source_name = f"source_{source_idx}"
             # Create the text element referenced in the message
             text_elements.append(
-                cl.Text(content=source_doc.page_content, name=source_name)
+                cl.Text(content=source_doc.page_content, name=source_name, display="side")
             )
         source_names = [text_el.name for text_el in text_elements]
 
