update custom api

--- a/backend/command-line.mdx
+++ b/backend/command-line.mdx
@@ -31,3 +31,4 @@ Options:
 - `--no-cache`: Disables third parties cache, such as langchain.
 - `--host`: Specifies a different host to run the server on.
 - `--port`: Specifies a different port to run the server on.
+- `--root-path`: Specifies a subpath to run the server on.
