--- a/deploy/api.mdx
+++ b/deploy/api.mdx
@@ -2,30 +2,30 @@
 title: API
 ---
 
-Chainlit is running a Fast API server that you can extend with your own endpoints.
+You can mount your Chainlit app on an existing FastAPI app to create custom endpoints.
 One good use case for this is to serve an assistant through a rest API.
-
-<Note>
-  If you create or update a custom endpoint, you will have to restart your
-  Chainlit process. The file watcher will not pick up changes.
-</Note>
 
 ## How it works
 
-To add a custom endpoint, import the FastAPI `app` instance from `chainlit.server` and declare your endpoint as you would in FastAPI.
+To mount your Chainlit app on an existing FastAPI app, you will have to define a subpath for your Chainlit app.
 
-```python
-from chainlit.server import app
-from fastapi import Request
-from fastapi.responses import (
-    HTMLResponse,
-)
+```python app.py
+from fastapi import FastAPI
+from chainlit.utils import mount_chainlit
 
+app = FastAPI()
 
-@app.get("/hello")
-def hello(request: Request):
-    print(request.headers)
-    return HTMLResponse("Hello World")
+@app.get("/app")
+def read_main():
+    return {"message": "Hello World from main app"}
+
+mount_chainlit(app=app, target="my_cl_app.py", path="/chainlit")
+```
+
+Now run your FastAPI app and you will be able to access your Chainlit app at `/chainlit`.
+
+```bash
+uvicorn app:app --host 0.0.0.0 --port 80
 ```
 
 ## Use Chainlit APIs in your endpoint
@@ -39,44 +39,45 @@ In an HTTP context, Chainlit APIs such as Message.send() will do nothing.
 If [data persistence](/data-persistence/overview) is enabled, the Chainlit APIs will still persist data.
 
 ```python
-from chainlit.server import app
-from fastapi import Request
-from fastapi.responses import (
-    HTMLResponse,
-)
-
+from fastapi import FastAPI
+from chainlit.utils import mount_chainlit
 from chainlit.context import init_http_context
 import chainlit as cl
 
-@app.get("/hello")
-async def hello(
-    request: Request,
-):
+
+app = FastAPI()
+
+@app.get("/app")
+async def read_main():
     init_http_context()
-    await cl.Message(content="Hello World").send()
-    return HTMLResponse("Hello World")
+    await cl.Message(content="Hello, I am a chatbot!").send()
+    return {"message": "Hello World from main app"}
+
+mount_chainlit(app=app, target="my_cl_app.py", path="/chainlit")
 ```
 
 ### Websocket context
 
 The only use case that requires to use the Websocket context within a custom endpoint is to send data to a websocket client (which you know the session ID of) based on some arbitrary HTTP request.
 
-```py
-from fastapi import Request
-from fastapi.responses import HTMLResponse
-
-
-from chainlit.server import app
-from chainlit.context import init_ws_context
-from chainlit.session import WebsocketSession
-
+```py my_cl_app
 import chainlit as cl
 
 
 @cl.on_chat_start
 def main():
     print("Session id:", cl.user_session.get("id"))
+```
 
+```py main
+from fastapi import FastAPI, Request
+from chainlit.utils import mount_chainlit
+from chainlit.context import init_ws_context
+from chainlit.session import WebsocketSession
+import chainlit as cl
+
+
+app = FastAPI()
 
 @app.get("/hello/{session_id}")
 async def hello(
@@ -86,7 +87,9 @@ async def hello(
     ws_session = WebsocketSession.get_by_id(session_id=session_id)
     init_ws_context(ws_session)
     await cl.Message(content="Hello World").send()
-    return HTMLResponse("Data sent to the websocket client")
+    return "Data sent to the websocket client"
+
+mount_chainlit(app=app, target="./my_cl_app.py")
 ```
 
 ## Authentication
@@ -96,23 +99,25 @@ However Chainlit authentication is fully compatible with custom endpoints.
 
 ```py
 from typing_extensions import Annotated
-from fastapi import Request, Depends
+from fastapi import Request, Depends, FastAPI
 from fastapi.responses import (
     HTMLResponse,
 )
 
-from chainlit.server import app
 from chainlit.context import init_http_context
 from chainlit.auth import authenticate_user
 import chainlit as cl
+
+app = FastAPI()
 
 @app.get("/hello")
 async def hello(
     request: Request,
     current_user: Annotated[
-        Union[cl.User], Depends(authenticate_user)
+        cl.User, Depends(authenticate_user)
     ],
 ):
+    print(current_user)
     init_http_context(user=current_user)
     await cl.Message(content="Hello World").send()
     return HTMLResponse("Hello World")
