add fast api doc:

--- a/deploy/overview.mdx
+++ b/deploy/overview.mdx
@@ -173,9 +173,10 @@ After you've successfully set up and tested your Chainlit application locally, t
 </Note>
 
 <Warning>
-  Currently, you have to serve your Chainlit app from the root of your
-  domain/subdomain. This means that you can't serve it from a subdirectory like
-  `example.com/my-app`.
+  If you need to deploy your Chainlit app to a subpath like
+  `https://my-app.com/chainlit`, you will need to set the `--root-path
+  /chainlit` flag when running the `chainlit run` command. This will ensure that
+  the app is served from the correct path.
 </Warning>
 
 - on [Ploomber Cloud](https://docs.cloud.ploomber.io/en/latest/apps/chainlit.html)
