--- a/integrations/openai.mdx
+++ b/integrations/openai.mdx
@@ -15,9 +15,8 @@ You need to add `cl.instrument_openai()` after creating your OpenAI client.
 
 <Warning>
   You shouldn't configure this integration if you're already using another
-  integration like Embedchain, Haystack, Langchain or LlamaIndex. Both
-  integrations would record the same generation and create duplicate steps in
-  the UI.
+  integration like Haystack, Langchain or LlamaIndex. Both integrations would
+  record the same generation and create duplicate steps in the UI.
 </Warning>
 
 ## Prerequisites
