--- a/guides/migration/1.1.300rc0.mdx
+++ b/guides/migration/1.1.300rc0.mdx
@@ -148,6 +148,12 @@ Let's say your message author is `My Assistant`, then you should place the avata
 
 If no avatar is found, it will default to the favicon.
 
+## Rework: Custom Endpoints
+
+Chainlit is now mountable as a FastAPI sub application. This allows you to use Chainlit on your existing FastAPI application.
+
+Check the [FastAPI integration](/integrations/fastapi) and [API documentation](/deploy/api) for more information.
+
 ## Minor Changes
 
 1. You can now configure the default theme in the `config.toml` file.
