Update overview.mdx - added windows powershell run command.
added windows power shell run command.

--- a/data-persistence/overview.mdx
+++ b/data-persistence/overview.mdx
@@ -55,6 +55,12 @@ Or inlined:
 LITERAL_API_KEY="your key" chainlit run main.py
 ```
 
+Or inlined for Windows powershell:
+
+```shell
+$ENV:LITERAL_API_KEY="your key"; chainlit run main.py
+```
+
 Once activated, your chats and elements will be persisted on Literal AI.
 
 ## Deactivation
