update migration guie

--- a/guides/migration/1.1.300.mdx
+++ b/guides/migration/1.1.300.mdx
@@ -1,21 +1,16 @@
 ---
-title: Migrate to Chainlit v1.1.300rc0
+title: Migrate to Chainlit v1.1.300
 ---
 
 <Note>Join the discord for live updates: https://discord.gg/AzyvDHWARx</Note>
 
 ## Updating Chainlit
 
-Begin the migration by updating Chainlit to the latest release candidate version:
+Begin the migration by updating Chainlit to the latest version:
 
 ```bash
-pip install --upgrade chainlit --pre
+pip install --upgrade chainlit
 ```
-
-<Warning>
-  Keep in mind that it is a pre-release. The documentation and cookbook may not
-  be up-to-date with the latest changes.
-</Warning>
 
 ## New Feature: Starters
 
