Warn against in-app setting of Slack env vars
Clarify that SLACK_BOT_TOKEN and SLACK_SIGNING_SECRET must be set externally since setting these vars inside the app prevents Slack endpoints from being added

--- a/deploy/slack.mdx
+++ b/deploy/slack.mdx
@@ -115,6 +115,8 @@ Navigate to the Install App tab and click on Install to Workspace.
 
 ## Set the Environment Variables
 
+<Note>Set the environment variables outside of your application code.</Note>
+
 ### Bot Token
 
 Once the slack application is installed, you will see the Bot User OAuth Token. Set this as an environment variable in your Chainlit app.
