feat: add mistral instrumentation

--- a/get-started/overview.mdx
+++ b/get-started/overview.mdx
@@ -32,17 +32,42 @@ Chainlit is compatible with all Python programs and libraries. That being said, 
   <Card
   title="OpenAI"
   icon="circle"
-  color="#dc2626"
+  color="#dddddd"
   href="/integrations/openai">
     Learn how to explore your OpenAI calls in Chainlit.
   </Card>
 
-{" "}
+<Card
+  title="OpenAI Assistant"
+  icon="circle"
+  color="#F80061"
+  href="https://github.com/Chainlit/openai-assistant"
+>
+  Learn how to integrate your OpenAI Assistants with Chainlit.
+</Card>
+
+<Card
+  title="Mistral AI"
+  icon="circle"
+  color="#ea5a0c"
+  href="/integrations/mistralai"
+>
+  Learn how to use any Mistral AI calls in Chainlit.
+</Card>
+
+<Card
+  title="Llama Index"
+  icon="circle"
+  color="#0285c7"
+  href="/integrations/llama-index"
+>
+  Learn how to integrate your Llama Index code with Chainlit.
+</Card>
 
 <Card
   title="LangChain"
   icon="circle"
-  color="#ea5a0c"
+  color="#3afadc"
   href="/integrations/langchain"
 >
   Learn how to use any LangChain agent with Chainlit.
@@ -55,24 +80,6 @@ Chainlit is compatible with all Python programs and libraries. That being said, 
   href="https://github.com/Chainlit/cookbook/tree/main/pyautogen"
 >
   Learn how to integrate your Autogen agents with Chainlit.
-</Card>
-
-<Card
-  title="OpenAI Assistant"
-  icon="circle"
-  color="#dc2626"
-  href="https://github.com/Chainlit/openai-assistant"
->
-  Learn how to integrate your OpenAI Assistants with Chainlit.
-</Card>
-
-<Card
-  title="Llama Index"
-  icon="circle"
-  color="#0285c7"
-  href="/integrations/llama-index"
->
-  Learn how to integrate your Llama Index code with Chainlit.
 </Card>
 
 <Card
