--- a/backend/config/features.mdx
+++ b/backend/config/features.mdx
@@ -9,6 +9,10 @@ title: Features
   https://stackoverflow.com/questions/19603097/why-is-it-dangerous-to-render-user-generated-html-or-javascript).
 </ParamField>
 
+<ParamField path="edit_message" type="bool" default={true}>
+  Allow the user to edit their messages.
+</ParamField>
+
 <ParamField path="latex" type="bool" default={false}>
   Process and display mathematical expressions. This can clash with "$"
   characters in messages.
