--- a/data-persistence/custom.mdx
+++ b/data-persistence/custom.mdx
@@ -88,6 +88,7 @@ CREATE TABLE IF NOT EXISTS elements (
 CREATE TABLE IF NOT EXISTS feedbacks (
     "id" UUID PRIMARY KEY,
     "forId" UUID NOT NULL,
+    "threadId" UUID NOT NULL,
     "value" INT NOT NULL,
     "comment" TEXT
 );
